<resources>
    <string name="app_name">InjuredAndroid</string>
    <string name="button_submit">Submit</string>
    <string name="edit_message">Enter text</string>
    <string name="title_activity_bypass_main">BypassMainActivity</string>
    <string name="activity_bypass_info">There is a way to bypass the main activity and invoke other activities that are exported.</string>
    <string name="input_flag">Enter flag</string>
    <string name="cmVzb3VyY2VzX3lv">F1ag_thr33</string>
    <string name="title_activity_flag_two">FlagTwoActivity</string>
    <string name="submit_flag_text">Input the flag and push submit.</string>
    <string name="title_activity_flag_three">FlagThreeActivity</string>
    <string name="title_activity_flag_four">FlagFourActivity</string>
    <string name="FlagOneText">Flag One - Login</string>
    <string name="FlagTwoText">Flag Two - Exported Activity</string>
    <string name="FlagThreeText">Flag Three - Resources</string>
    <string name="FlagFourText">Flag Four - Login 2</string>
    <string name="title_activity_flag_five">FlagFiveActivity</string>
    <string name="title_activity_flag_five_receiver">FlagFiveReceiver</string>
    <string name="title_activity_test_broadcast_reciever">TestBroadcastReciever</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="title_activity_flag_six_login">FlagSixLoginActivity</string>
    <string name="title_activity_flags_overview">FlagsOverview</string>
    <string name="flags_overview">Flags Overview</string>
    <string name="flag_five_exported_broadcast_receiver">Flag Five - Exported Broadcast Receiver</string>
    <string name="xsstext">XSSText</string>
    <string name="flag_1">Flag 1</string>
    <string name="flag_2">Flag 2</string>
    <string name="flag_4">Flag 4</string>
    <string name="flag_5">Flag 5</string>
    <string name="flag_6">Flag 6</string>
    <string name="flag_3">Flag 3</string>
    <string name="title_activity_flag_seven_sqlite">FlagSevenSqliteActivity</string>
    <string name="flag_six_login_3">flag six - login 3</string>
    <string name="enter_flag">Enter flag</string>
    <string name="flag_seven_sqlite">Flag seven - sqlite</string>
    <string name="title_activity_flag_eight_login">FlagEightLoginActivity</string>
    <string name="flag_eight_aws">flag eight - aws</string>
    <string name="title_activity_flag_nine_firebase">FlagNineFirebaseActivity</string>
    <string name="title_activity_flag_one_login">FlagOneLoginActivity</string>
    <string name="congrats_you_found_the_flag_d">Congrats you found the flag! :D</string>
    <string name="flag_nine_firebase">flag nine - Firebase</string>
    <string name="title_activity_flag_ten_unicode">FlagTenUnicodeActivity</string>
    <string name="flag_ten_unicode">flag ten - Unicode</string>
    <string name="flag_7">flag 7</string>
    <string name="flag_9">flag 9</string>
    <string name="flag_8">flag 8</string>
    <string name="login">login</string>
    <string name="title_activity_deep_link">DeepLinkActivity</string>
    <string name="title_activity_flag_twelve_protected">FlagTwelveProtectedActivity</string>
    <string name="input_uri">Input Uri</string>
    <string name="flag_10">flag 10</string>
    <string name="flag_11">flag 11</string>
    <string name="enter_password">Enter password</string>
    <string name="flag_12">flag 12</string>
    <string name="title_activity_exported_protected_intent">ExportedProtectedIntent</string>
    <string name="AWS_ID"></string>
    <string name="AWS_SECRET"></string>
    <string name="flag_eleven_deep_links">flag eleven - Deep Links</string>
    <string name="flag_twelve_protected_components">flag twelve - Protected Components</string>
    <string name="clear_flags">clear flags</string>
    <string name="donate">Donate</string>
    <string name="donate_here_to_help_support_development">Donate here to help support development!</string>
    <string name="digital_ocean_credit">Digital Ocean Credit</string>
    <string name="need_a_vps_have_100_of_digital_ocean_credit">Need a VPS? Have $100 of Digital Ocean credit!</string>
    <string name="contact_me">Contact me!</string>
    <string name="title_activity_rce">RCEActivity</string>
    <string name="rceview">RCEView</string>
    <string name="flag_thirteen_rce">Flag Thirteen - RCE</string>
    <string name="flag_13">Flag 13</string>
    <string name="flag_fourteen_flutter_xss">Flag fourteen - Flutter XSS</string>
    <string name="flag_14">Flag 14</string>
    <string name="title_activity_assembly">AssemblyActivity</string>
    <string name="flag_15_assembly">Flag 15 - Assembly</string>
    <string name="assemblytextview">AssemblyTextView</string>
    <string name="flag_15">Flag 15</string>
    <string name="flag_16_csp_bypass">Flag 16 - CSP Bypass</string>
    <string name="title_activity_c_s_p_bypass">CSPBypassActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="flag_16">Flag 16</string>
    <string name="textview">TextView</string>
    <string name="title_activity_flag_seventeen">FlagSeventeenActivity</string>
    <string name="flag_17_ssl_pinning_bypass">Flag 17 - SSL Pinning Bypass</string>
    <string name="flag_fifteen_assembly">Flag Fifteen - Assembly</string>
    <string name="flag_sixteen_csp_bypass">Flag Sixteen - CSP Bypass</string>
    <string name="flag_seventeen_ssl_pinning_bypass">Flag Seventeen - SSL Pinning Bypass</string>
    <string name="flag_17">Flag 17</string>
    <string name="title_activity_flag_eighteen">FlagEighteenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="flag_eighteen_file_provider">Flag Eighteen - File Provider</string>
    <string name="flag_18">Flag 18</string>
</resources>
